force-app/main/default/objects/Presupuesto_de_Compra__c/Presupuesto_de_Compra__c.object-meta.xml
<CustomObject>
    <label>Presupuesto de Compra</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Nombre de Cotizacion Prestador</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Presupuestos de Compras</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>