force-app/main/default/objects/Presupuesto_de_Compra__c/fields/Ahorro_de_gestion__c.field-meta.xml
<CustomField>
    <fullName>Ahorro_de_gestion__c</fullName>
    <formula>(Importe_unitario__c - Importe_mejorado__c) *  Cantidad__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ahorro de gestion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>