force-app/main/default/objects/Presupuesto_de_Compra__c/fields/Cantidad__c.field-meta.xml
<CustomField>
    <fullName>Cantidad__c</fullName>
    <formula>Prestacion__r.Cantidad__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cantidad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>