force-app/main/default/objects/Presupuesto_de_Compra__c/fields/Cargo_al_socio__c.field-meta.xml
<CustomField>
    <fullName>Cargo_al_socio__c</fullName>
    <label>Cargo al Socio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>