force-app/main/default/objects/Presupuesto_de_Compra__c/fields/Cotizacion_Prestador__c.field-meta.xml
<CustomField>
    <fullName>Cotizacion_Prestador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cotizacion Prestador</label>
    <referenceTo>Cotizacion_Prestador__c</referenceTo>
    <relationshipLabel>Presupuestos de Compras</relationshipLabel>
    <relationshipName>Presupuestos_de_Compras</relationshipName>
    <type>Lookup</type>
</CustomField>