force-app/main/default/objects/Presupuesto_de_Compra__c/fields/Descripcion__c.field-meta.xml
<CustomField>
    <fullName>Descripcion__c</fullName>
    <label>Descripcion</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>