force-app/main/default/objects/Presupuesto_de_Compra__c/fields/Descripcion_Marca__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_Marca__c</fullName>
    <formula>Marca__r.Descripcion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descripcion Marca</label>
    <type>Text</type>
</CustomField>