force-app/main/default/objects/Presupuesto_de_Compra__c/fields/Elegido__c.field-meta.xml
<CustomField>
    <fullName>Elegido__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Elegido</label>
    <type>Checkbox</type>
</CustomField>