force-app/main/default/objects/Presupuesto_de_Compra__c/fields/Evencto_Medico__c.field-meta.xml
<CustomField>
    <fullName>Evencto_Medico__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Evento Médico</label>
    <referenceTo>Evento_medico__c</referenceTo>
    <relationshipLabel>Presupuestos de Compras</relationshipLabel>
    <relationshipName>Presupuestos_de_Compras</relationshipName>
    <type>Lookup</type>
</CustomField>