force-app/main/default/objects/Presupuesto_de_Compra__c/fields/Importe_unitario__c.field-meta.xml
<CustomField>
    <fullName>Importe_unitario__c</fullName>
    <label>Importe Unitario</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>