force-app/main/default/objects/Presupuesto_de_Compra__c/fields/Marca__c.field-meta.xml
<CustomField>
    <fullName>Marca__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marca</label>
    <referenceTo>Marca__c</referenceTo>
    <relationshipLabel>Presupuestos de Compras</relationshipLabel>
    <relationshipName>Presupuestos_de_Compras</relationshipName>
    <type>Lookup</type>
</CustomField>