force-app/main/default/objects/Presupuesto_de_Compra__c/fields/Marca_material__c.field-meta.xml
<CustomField>
    <fullName>Marca_material__c</fullName>
    <label>Marca Material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>