force-app/main/default/objects/Presupuesto_de_Compra__c/fields/Prestacion__c.field-meta.xml
<CustomField>
    <fullName>Prestacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prestación</label>
    <referenceTo>Prestacion__c</referenceTo>
    <relationshipLabel>Presupuestos de Compras</relationshipLabel>
    <relationshipName>Presupuestos_de_Compras</relationshipName>
    <type>Lookup</type>
</CustomField>