force-app/main/default/objects/Presupuesto_de_Compra__c/fields/Prestador__c.field-meta.xml
<CustomField>
    <fullName>Prestador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prestador</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Presupuestos de Compras</relationshipLabel>
    <relationshipName>Presupuestos_de_Compras</relationshipName>
    <type>Lookup</type>
</CustomField>